test/mlir/reduce_sum_bad_case_3.mlir.stderr
test/mlir/reduce_sum_bad_case_3.mlir:3:10: error: 'colgm.reduce_sum' op axes[0] = -1 is out of range [0, 3)
    %0 = colgm.reduce_sum %arg {axes = [-1]} : tensor<2x3x4xf32> -> tensor<2x4xf32>
         ^
test/mlir/reduce_sum_bad_case_3.mlir:3:10: note: see current operation: %0 = "colgm.reduce_sum"(%arg0) {axes = [-1]} : (tensor<2x3x4xf32>) -> tensor<2x4xf32>
